Fix countdown alignment

--- a/src/scss/japan.scss
+++ b/src/scss/japan.scss
@@ -204,6 +204,7 @@
     padding: 5px;
     border-radius: 3px;
     white-space: nowrap;
+    line-height: 22px;
     &.alert {
       background: #fbe4d7;
     }
